compiler/testData/diagnostics/tests/renderConstructorWithIntersection.diag.txt
/Main.kt:22:18: error: type mismatch: inferred type is {A & B}! but Int was expected
    val a: Int = Flexier.flexify(if (true) O1 else O2)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/Main.kt:22:26: error: type mismatch: inferred type is {A & B}! but Int! was expected
    val a: Int = Flexier.flexify(if (true) O1 else O2)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

